hash includes are getting parsed

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,10 +2,9 @@
     "parser": "babel-eslint",
     "env": {
         "node": true,
-        //"es6":true
+        "es6":true
     },
     "ecmaFeatures": {
-        "jsx": true
     },
     "globals": {
     },
