--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a tool for bundling Adobe ExtendScripts that use the `#include 'path/to/file'` statement",
   "main": "dist/index.js",
   "scripts": {
-    "test-bundlr": "node ./dist/index.js -i test/src/main.jsx -o out.jsx -r",
+    "test-at": "node ./dist/index.js -i test/src/test.at.jsx -o out.jsx -r",
+    "test-hash": "node ./dist/index.js -i test/src/test.hash.jsx -o out.jsx -r",
     "watch": "./node_modules/.bin/babel src -w -d dist/"
   },
   "keywords": ["Adobe", "ExtendScript", "automation"],
