--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "a tool for bundling Adobe ExtendScripts that use the `#include 'path/to/file'` statement",
   "main": "dist/index.js",
   "scripts": {
-    "test-at": "node ./dist/index.js -i test/src/test.at.jsx -o out.jsx -r",
-    "test-hash": "node ./dist/index.js -i test/src/test.hash.jsx -o out.jsx -r",
-    "test-includepath": "node ./dist/index.js -i test/src/test.includepath.at.jsx -o out.jsx -r",
+    "prewatch": "rm -rf ./dist && mkdir ./dist",
     "watch": "./node_modules/.bin/babel src -w -d dist/"
   },
-  "keywords": ["Adobe", "ExtendScript", "automation"],
-  "contributors": [{
-    "name": "Fabian 'fabiantheblind' Morón Zirfas",
-    "email": "fabian.moron.zirfas@gmail.com",
-    "url": "http://fabianmoronzirfas.me"
-  }],
+  "keywords": [
+    "Adobe",
+    "ExtendScript",
+    "automation"
+  ],
+  "contributors": [
+    {
+      "name": "Fabian 'fabiantheblind' Morón Zirfas",
+      "email": "fabian.moron.zirfas@gmail.com",
+      "url": "http://fabianmoronzirfas.me"
+    }
+  ],
   "license": "ISC",
   "bin": {
     "exsbundlr": "./dist/index.js"
@@ -24,10 +28,13 @@
     "babel-preset-es2015": "^6.6.0"
   },
   "dependencies": {
+    "abs": "^1.3.4",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
+    "escape-string-regexp": "^1.0.5",
     "file-exists": "^1.0.0",
     "line-reader": "^0.4.0",
+    "tilde-expansion": "0.0.0",
     "verbal-expressions": "^0.2.1"
   },
   "repository": {
