--- a/package.json
+++ b/package.json
@@ -31,11 +31,8 @@
     "abs": "^1.3.4",
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
-    "escape-string-regexp": "^1.0.5",
     "file-exists": "^1.0.0",
-    "line-reader": "^0.4.0",
-    "tilde-expansion": "0.0.0",
-    "verbal-expressions": "^0.2.1"
+    "line-reader": "^0.4.0"
   },
   "repository": {
     "type": "git",
