--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "dist/index.js",
   "scripts": {
     "prewatch": "rm -rf ./dist && mkdir ./dist",
-    "watch": "./node_modules/.bin/babel src -w -d dist/"
+    "dev": "./node_modules/.bin/babel src -w -d dist/",
+    "build": "npm run prewatch && babel src -d dist/",
+    "test": "./dist/index.js -i ./test/src.jsx -o ./test/out.jsx",
+    "test:report": "./dist/index.js -i ./test/src.jsx -o ./test/out.jsx -r",
+    "test:missing": "./dist/index.js -i ./test/src.jsx -o ./test/out.jsx -m"
   },
   "keywords": [
     "Adobe",
@@ -25,7 +29,11 @@
   },
   "devDependencies": {
     "babel-cli": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0"
+    "babel-eslint": "^8.2.6",
+    "babel-preset-es2015": "^6.6.0",
+    "cz-conventional-changelog": "^2.1.0",
+    "eslint": "^5.2.0",
+    "eslint-config-unobtrusive": "^1.2.2"
   },
   "dependencies": {
     "abs": "^1.3.4",
@@ -40,5 +48,10 @@
   },
   "bugs": {
     "url": "https://github.com/fabiantheblind/extendscript-bundlr/issues"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
